css/common.css
/* ... */
.headingL::after {
  position: absolute;
  left: 0;
  bottom: -10px;
  content: "";
  width: 100%;
  height: 18px;
  background-size: 18px 18px;
  background-image: repeating-conic-gradient(from 0deg, var(--bg) 0deg 90deg, #fff 90deg 180deg);
  background-repeat: repeat;
}
.headingL.ja {
  font-size: clamp(2.4rem, 2.24rem + 0.8vw, 3.2rem);
}

/*－－－－－－－－－－ 中見出し －－－－－－－－－－*/
.headingM {
  font-size: clamp(2.2rem, 2.08rem + 0.6vw, 2.8rem);
  margin: clamp(3rem, 2.8rem + 1vw, 4rem) 0;
  background-color: var(--bg);
  padding: 6px 20px 0;
}
.headingM.ja {
  font-size: clamp(2rem, 1.92rem + 0.4vw, 2.4rem);
}

/*－－－－－－－－－－ 小見出し －－－－－－－－－－*/
.headingS {
  position: relative;
  font-size: clamp(2rem, 1.92rem + 0.4vw, 2.4rem);
  margin: 20px 0;
  position: relative;
  padding-left: 30px;
}
.headingS::before {
  content: "";
  position: absolute;
  top: calc(50% - 10px);
  left: 0;
  width: 20px;
  height: 20px;
  background-size: 20px 20px;
  background-image: repeating-conic-gradient(from 0deg, var(--bg) 0deg 90deg, var(--accent) 90deg 180deg);
}
.headingS.ja {
  font-size: clamp(1.6rem, 1.286rem + 0.76vw, 1.8rem);
}

/*－－－－－－－－－－ 最小見出し －－－－－－－－－－*/
.headingSS {
  font-size: clamp(1.6rem, 1.286rem + 0.76vw, 1.8rem);
  margin: 20px 0;
}

/*－－－－－－－－－－ 文字装飾 －－－－－－－－－－*/
.right {
  text-align: right;
}

.center {
  text-align: center;
}

.marker {
  background: linear-gradient(transparent 60%, var(--bg) 60%);
}

.label {
  display: block;
  margin: 20px 0;
  padding: 2px 10px;
  background-color: var(--accent);
  color: #fff;
  width: -moz-fit-content;
  width: fit-content;
}

/*－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－

リンク

－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－*/
a {
  color: inherit;
  text-decoration-color: var(--accent);
  text-underline-offset: 4px;
  -moz-text-decoration-color: var(--accent);
}

@media (hover: hover) {
  a img:hover {
    filter: saturate(0.3);
    -webkit-filter: saturate(0.3);
  }
}
/*－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－

アイコン等

－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－*/
.la,
.las {
  font-size: 1.2em;
  color: var(--accent);
  position: relative;
  top: 2px;
}

/* 矢印 */
.arrow {
  width: 20px;
  height: 20px;
  border: 2px solid var(--bg);
  border-bottom: 0;
  border-left: 0;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
}

/*－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－

入力フォーム、ボタン

－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－*/
/* 入力フォーム */
input,
textarea {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  padding: 10px 20px 8px 20px;
  border: 1px solid var(--bg);
  margin: 10px 0;
}

/* ボタン */
.btn {
  display: block;
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  background-color: var(--accent);
  color: #fff;
  text-align: center;
  text-decoration: none;
  padding: 3px 10px;
  border: 1px solid var(--accent);
  transition: 0.2s;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
}
.btn:hover {
  cursor: pointer;
  background-color: var(--bg);
  color: #333;
}

/*－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－

リスト

－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－*/
.list,
.list-number {
  margin: 20px 0;
}

.list li {
  position: relative;
  margin-left: 16px;
}
.list li::before {
  position: absolute;
  top: calc(50% - 4px);
  left: -16px;
  content: "";
  display: block;
  width: 8px;
  height: 8px;
  background-color: var(--bg);
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
}

/*－－－－－－－－－－ 数字付きリスト －－－－－－－－－－*/
.list-number {
  list-style-type: decimal-leading-zero;
  list-style-position: inside;
}
.list-number li {
  text-indent: -3.4rem;
  padding-left: 3.6rem;
}
.list-number li > :not(:first-child) {
  text-indent: 0;
}

/*－－－－－－－－－－ 表リスト －－－－－－－－－－*/
.gridlist {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 10px 20px;
}
.gridlist .gridlist__label,
.gridlist .gridlist__text {
  padding: 6px 12px 4px;
}
.gridlist .gridlist__label {
  display: flex;
  align-items: center;
  background-color: var(--bg);
}

/* スマホ */
@media screen and (max-width: 520px) {
  .gridlist {
    grid-template-columns: 1fr;
  }
}
/*－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－

枠組み

－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－*/
.box {
  position: relative;
  border: 1px solid var(--accent);
  border-left: none;
  border-right: none;
  margin: 80px;
  padding: 60px 40px;
}
.box::before, .box::after {
  position: absolute;
  left: 0;
  content: "";
  width: 100%;
  height: 18px;
  background-size: 18px 18px;
  background-image: repeating-conic-gradient(from 0deg, var(--bg) 0deg 90deg, #fff 90deg 180deg);
  background-repeat: repeat;
}
.box::before {
  top: 8px;
}
.box::after {
  bottom: 8px;
}
.box > :first-child {
  margin-top: 0;
}
.box > :last-child {
  margin-bottom: 0;
}

/* タブレット、スマホ */
@media screen and (max-width: 1023px) {
  .box {
    margin: 40px 20px;
    padding: 40px 10px;
  }
}
/*－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－

SNSアイコンリスト

－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－－*/
.snslist .snslist__item {
  width: 36px;
  height: 36px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--accent);
  border-radius: 50%;
  transition: 0.2s;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -ms-transition: 0.2s;
  -moz-transition: 0.2s;
}
.snslist .snslist__item .lab {
  margin: 6px 1px 3px 3px;
  font-size: 2rem;
}
.snslist .snslist__item a {
  color: #fff;
}
.snslist .snslist__item:hover.twitter {
  background-color: #acacac;
}
.snslist .snslist__item:hover.instagram {
  background-color: #925fc2;
}
.snslist .snslist__item:hover.facebook {
  background-color: #47ff87;
}
.snslist .snslist__item:hover.youtube {
  background-color: #DA1725;
}

/* スマホ */
@media screen and (max-width: 520px) {
  .snslist {
    justify-content: center;
  }
}
/* ... */

